@@ -39,6 +39,7 @@
 
   <div class="form-actions">
     <%= submit_tag 'Filter Search', class: 'btn btn-primary' %>
+    <%= link_to 'Export CSV', '#', class: 'btn', data: { target: '#evaluations_search', object: 'export', format: 'csv' } %>
   </div>
 <% end %>
 
